overlays/qal/qal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /qal-nginx
            backend:
              service:
                name: web-service
                port:
                  number: 8080
